<?xml version="1.0" encoding="utf-8"?>

<!--
Name:   Jake McGrath
Proj:   Final Project
Due:    08 June 2022
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/img_start_screen"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/reading_journal_title_image"
            android:contentDescription="@string/img_start_screen_description" />

        <!-- Welcome spiel -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:fontFamily="@font/pacifico"
            android:text="@string/txt_welcome" />

        <!-- Separate layout for horizontally placed buttons on an otherwise vertically oriented
        outer layout -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btn_my_ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/btn_see_ratings" />

            <Button
                android:id="@+id/btn_new_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/btn_new_rating" />

        </LinearLayout>

        <!-- Section for seeing how many books you've rated so far -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/pacifico"
            android:text="@string/txt_books_rated" />

        <TextView
            android:id="@+id/txt_number_of_books_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@color/gainsboro"
            android:text="" />

    </LinearLayout>

</ScrollView>