<?xml version="1.0" encoding="utf-8"?>


<!--
Name:   Jake McGrath
Proj:   Final Project
Due:    08 June 2022
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        tools:context=".MyRatingsActivity">

        <!-- displays the db's contents -->
        <TextView
            android:id="@+id/txt_rating_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:text="" />

        <!-- displays the number of records in the db -->
        <TextView
            android:id="@+id/txt_num_of_books_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="" />

        <!-- Layout for all remaining Buttons, TextViews, and EditText widgets -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <!-- Layout for side-by-side buttons (New Rating & Refres) -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_rate_another_book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/btn_rate_another" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Refresh"
                    android:onClick="refresh" />

            </LinearLayout>

            <!-- Textview instructions on how to delete a rating, with EditText and Button for functionality -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/txt_want_to_delete"/>

            <EditText
                android:id="@+id/edt_delete_by_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="number"
                android:background="@color/gainsboro"
                android:hint="@string/edt_delete_by_isbn_hint" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:onClick="deleteRating"
                android:backgroundTint="@color/fireBrick"
                android:text="@string/btn_delete_rating" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>